# todo

./: Dockerfile  crud.py  database.py  main.py  pyproject.toml  schemas.py  sqlite3.db
alembic/: env.py
alembic/versions/: 2024_09_05_2253-ef127171b38e_initial.py  2024_09_05_2259-821e952118b5_add_created_at.py
